--- a/.github/codeql/resolved-misra-rules.yml
+++ b/.github/codeql/resolved-misra-rules.yml
@@ -10,3 +10,4 @@ queries:
   - uses: ./codeql-coding-standards/c/misra/src/rules/RULE-8-2/FunctionTypesNotInPrototypeForm.ql
   - uses: ./codeql-coding-standards/c/misra/src/rules/RULE-8-3/DeclarationsOfAFunctionSameNameAndType.ql #[1/2]
 #  - uses: ./codeql-coding-standards/c/misra/src/rules/RULE-8-3/DeclarationsOfAnObjectSameNameAndType.ql #[2/2]
+#  - uses: ./codeql-coding-standards/c/misra/src/rules/RULE-10-4/OperandsWithMismatchedEssentialTypeCategory.ql
